...
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <ImageView
                android:id="@+id/coins"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.168"
                app:srcCompat="@drawable/circle_white"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/CountCollected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:text="@string/_0"
                android:textAlignment="viewStart"
                android:textColor="@color/mapboxWhite"
...
        android:id="@+id/include"
        layout="@layout/content_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/openWalletButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951"
        app:srcCompat="@drawable/wallet" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/changeThemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
