<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalletActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/friendtransferButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:backgroundTint="@color/fui_bgPhone"
        app:borderWidth="0dp"
        app:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857"
        app:fabCustomSize="95dp"
        app:maxImageSize="60dp"
        app:pressedTranslationZ="1dp"
        app:srcCompat="@drawable/moneytransfer"
        android:focusable="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/banktransferButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:backgroundTint="@color/fui_bgPhone"
        app:borderWidth="0dp"
        app:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857"
        app:fabCustomSize="95dp"
        app:maxImageSize="60dp"
        app:pressedTranslationZ="1dp"
        app:srcCompat="@drawable/bank"
        android:focusable="true" />

    <ImageView
    android:id="@+id/purplecircle"
    android:layout_width="187dp"
    android:layout_height="176dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.502"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.168"
    app:srcCompat="@drawable/circle"
    tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/overallScoreSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/fui_bgPhone"
        android:text="@string/total_score"
        android:textColor="@color/mapboxWhite"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout2"
        app:layout_constraintVertical_bias="0.189" />

    <TextView
        android:id="@+id/overallScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/fui_bgPhone"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@color/fui_bgPhone"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout2"
        app:layout_constraintVertical_bias="0.297" />

    <TextView
        android:id="@+id/collectedBankable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/fui_bgPhone"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/friendtransferButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collectedSign"
        app:layout_constraintVertical_bias="0.608" />

    <TextView
        android:id="@+id/collectedSpareChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/fui_bgPhone"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spareChangeSign"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/collectedGift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/fui_bgPhone"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/banktransferButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toEndOf="@+id/collectedBankable"
        app:layout_constraintTop_toBottomOf="@+id/giftSign"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/collectedSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/collected"
        android:textColor="@color/fui_bgPhone"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spareChangeSign"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <TextView
        android:id="@+id/spareChangeSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="80dp"
        android:text="@string/spare_change"
        android:textColor="@color/fui_bgPhone"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purplecircle"
        app:layout_constraintVertical_bias="0.089" />

    <TextView
        android:id="@+id/giftSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:text="@string/gift"
        android:textColor="@color/fui_bgPhone"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toEndOf="@+id/collectedSign"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:text="@string/sign_out"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>